fixed trix mobile overflow

--- a/app/assets/stylesheets/trix_editor.scss
+++ b/app/assets/stylesheets/trix_editor.scss
@@ -7,6 +7,16 @@ trix-editor {
   word-wrap: break-word;
 }
 
+trix-toolbar .trix-button-group--history-tools {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  trix-toolbar .trix-button-group--history-tools {
+    display: inherit;
+  }
+}
+
 // .trix-button-row {
 //   display: flex;
 //   flex-wrap: wrap;
